--- a/nervous/Makefile.am
+++ b/nervous/Makefile.am
@@ -4,7 +4,8 @@ AM_LDFLAGS =
 all: libnervous.a
 
 lib_LIBRARIES = libnervous.a
-libnervous_a_SOURCES = src/blasfuncs.cpp src/netarch.cpp src/nettools.cpp src/math.cpp src/foo.cpp
+
+libnervous_a_SOURCES = src/blasfuncs.cpp src/netarch.cpp src/nettools.cpp src/mathutil.cpp src/layer.cpp src/net.cpp src/training.cpp
 
 ACLOCAL_AMFLAGS = -I m4 --install
 EXTRA_DIST = m4/NOTES
