--- a/nervous/Makefile.in
+++ b/nervous/Makefile.in
@@ -135,7 +135,7 @@ libnervous_a_LIBADD =
 am__dirstamp = $(am__leading_dot)dirstamp
 am_libnervous_a_OBJECTS = src/blasfuncs.$(OBJEXT) \
 	src/netarch.$(OBJEXT) src/nettools.$(OBJEXT) \
-	src/FloatMath.$(OBJEXT) src/foo.$(OBJEXT)
+	src/math.$(OBJEXT) src/foo.$(OBJEXT)
 libnervous_a_OBJECTS = $(am_libnervous_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -303,7 +303,7 @@ top_srcdir = @top_srcdir@
 AM_CXXFLAGS = -g -pedantic -Wall -std=c++11 -Iinclude -Isrc
 AM_LDFLAGS = 
 lib_LIBRARIES = libnervous.a
-libnervous_a_SOURCES = src/blasfuncs.cpp src/netarch.cpp src/nettools.cpp src/FloatMath.cpp src/foo.cpp
+libnervous_a_SOURCES = src/blasfuncs.cpp src/netarch.cpp src/nettools.cpp src/math.cpp src/foo.cpp
 ACLOCAL_AMFLAGS = -I m4 --install
 EXTRA_DIST = m4/NOTES
 all: config.h
@@ -397,7 +397,7 @@ src/$(am__dirstamp):
 src/blasfuncs.$(OBJEXT): src/$(am__dirstamp)
 src/netarch.$(OBJEXT): src/$(am__dirstamp)
 src/nettools.$(OBJEXT): src/$(am__dirstamp)
-src/FloatMath.$(OBJEXT): src/$(am__dirstamp)
+src/math.$(OBJEXT): src/$(am__dirstamp)
 src/foo.$(OBJEXT): src/$(am__dirstamp)
 
 libnervous.a: $(libnervous_a_OBJECTS) $(libnervous_a_DEPENDENCIES) $(EXTRA_libnervous_a_DEPENDENCIES) 
